syntax = "proto3";

package auth;

import "dto.proto";

option go_package = "github.com/samithiwat/samithiwat-backend-user/src/proto";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse){}
  rpc Login(LoginRequest) returns (LoginResponse){}
  rpc Validate(ValidateRequest) returns (ValidateResponse){}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse){}
}

// Register

message RegisterRequest{
  dto.Register register = 1;
}

message RegisterResponse{
  int32 StatusCode = 1;
  repeated string errors = 2;
  repeated dto.User data = 3;
}

// Login

message LoginRequest{
  dto.Login login = 1;
}

message LoginResponse{
  int32 StatusCode = 1;
  repeated string errors = 2;
  repeated dto.Credential data = 3;
}

// Validate

message ValidateRequest{
  string token = 1;
}

message ValidateResponse{
  int32 StatusCode = 1;
  repeated string errors = 2;
  repeated dto.TokenPayload data = 3;
}

message RefreshTokenRequest{
  string refreshToken = 1;
}

message RefreshTokenResponse{
  int32 StatusCode = 1;
  repeated string errors = 2;
  dto.Credential data = 3;
}
